# ssafy-Oops

./: README.md  README_p.md
EncoderMotor/encoderMotorControl/: EncoderMotor.cpp  EncoderMotor.hpp  encoderMotorControl.ino
HW/: base_pad.CATPart  bearing_bracket_left.CATPart  bearing_bracket_left2.CATPart  bearing_bracket_right.CATPart  bearing_bracket_right2.CATPart  bearing_shaft.CATPart  camera_bracket.CATPart  feet_pad.CATPart  gear.CATPart  gear_for_bearing.CATPart  gear_for_motor.CATPart  gear참고용.CATPart  motor_bracket.CATPart  rolliong_pad.CATPart  표준스트레이트 베벨기어(BevelGear).xlsx
backend/: mesh_convert_service.py  ply2gltf.py
depth_cam/: CMakeLists.txt  Depth.cpp  rs_raw_dump.cpp  scanner_service.py  serial_test.cpp
depth_cam/include/: Depth.h  motor.h  ply_writer.h  pointcloud.h
depth_cam/src/: main.cpp
exec/: app_porting_manual.md  ec2_server_porting_manual.md  esp32_porting_manual.md  raspberry_pi_porting_manual.md
oops_app/: README.md  pubspec.yaml
oops_app/android/app/: build.gradle.kts
oops_app/assets/glbs/: test.glb
oops_app/ios/Runner/: Info.plist
oops_app/ios/Runner.xcodeproj/: project.pbxproj
oops_app/lib/: main.dart
oops_app/lib/screens/home/: main_screen.dart
oops_app/lib/screens/splash/: intro_screen.dart  splash_screen.dart
oops_app/linux/: CMakeLists.txt
oops_app/linux/runner/: my_application.cc
oops_app/macos/Runner.xcodeproj/: project.pbxproj
oops_app/test/: widget_test.dart
oops_app/web/: index.html  manifest.json
oops_app/windows/: CMakeLists.txt
oops_app/windows/runner/: Runner.rc  main.cpp
(+4 files in other folders)
